// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Select Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-eJwXpk cSvIgq sc-nVjpj gBlvCf"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 kQlWUB"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoBZOR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dtQiSn"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 MyZBA Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-jeqYYF eATGVe"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jzyREm"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-ofa7kd-0 egSDBj"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-eJwXpk cSvIgq sc-nVjpj gBlvCf"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 kQlWUB"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoBZOR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dtQiSn"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 MyZBA Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-jeqYYF gZkBER"
                readonly=""
                tabindex="-1"
                type="text"
                value="Option 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jzyREm"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-ofa7kd-0 egSDBj"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select Invalid 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-eJwXpk jxDcHM sc-nVjpj gBlvCf"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 kQlWUB"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoBZOR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dtQiSn"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 MyZBA Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-jeqYYF eATGVe"
                readonly=""
                tabindex="-1"
                type="text"
                value="Option 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jzyREm"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-ofa7kd-0 egSDBj"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select Object Options 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-eJwXpk cSvIgq sc-nVjpj gBlvCf"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 kQlWUB"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoBZOR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dtQiSn"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 MyZBA Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-jeqYYF eATGVe"
                readonly=""
                tabindex="-1"
                type="text"
                value="Object 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jzyREm"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-ofa7kd-0 egSDBj"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select With Custom Option 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-eJwXpk cSvIgq sc-nVjpj gBlvCf"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 kQlWUB"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoBZOR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dtQiSn"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 MyZBA Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-jeqYYF eATGVe"
                readonly=""
                tabindex="-1"
                type="text"
                value="Option 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jzyREm"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-ofa7kd-0 egSDBj"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-eJwXpk cSvIgq sc-nVjpj gBlvCf"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 kQlWUB"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hoBZOR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dtQiSn"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 MyZBA Select__SelectTextInput-sc-17idtfo-0 kMNVoA sc-jeqYYF eATGVe"
                placeholder="Select one..."
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 jzyREm"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-ofa7kd-0 egSDBj"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
